# logi

./: .env.example  .env.saas.example  DELIVERY_SUMMARY.md  Dockerfile  Dockerfile.agent  Dockerfile.api-gateway  Dockerfile.customer-support  Dockerfile.dashboard  Dockerfile.fleet-management  Dockerfile.orchestrator  Dockerfile.saas-api  Dockerfile.saas-dashboard  Dockerfile.voice-gateway  Dockerfile.warehouse-ops  END_TO_END_SUMMARY.md  Makefile  Makefile.saas  PHASE_2_COMPLETION_SUMMARY.md  README.md  SAAS_BUILD_SUMMARY.md  SAAS_README.md  agent-api-specifications.md  docker-compose.saas.yml  docker-compose.yml  lanework-master-prd.md  project-instructions.md  pyproject.toml  requirements.saas.txt  requirements.txt
agents/customer-support/: __init__.py  config.py  main.py  schemas.py  service.py
agents/fleet-management/: __init__.py  config.py  main.py  schemas.py  service.py
agents/inventory-management/: __init__.py  config.py  main.py  schemas.py  service.py
agents/route-optimization/: __init__.py  config.py  main.py  schemas.py  service.py
agents/shipment-tracking/: __init__.py  config.py  main.py  schemas.py  service.py
agents/warehouse-ops/: __init__.py  config.py  main.py  schemas.py  service.py
apps/: __init__.py
apps/admin-console/: __init__.py  package.json
apps/api-gateway/: __init__.py  config.py  main.py  middleware.py
apps/chat-copilot/: __init__.py  config.py  main.py  schemas.py  service.py
apps/dashboard/: __init__.py  config.py  index.html  package.json  tailwind.config.js  vite.config.ts
apps/landing/: __init__.py  index.html  package.json
apps/orchestrator/: __init__.py  config.py  graphs.py  (+3 more)
(+67 files in other folders)
