[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "lanework"
version = "1.0.0"
description = "Multi-tenant agentic operating system for logistics"
authors = ["Lanework Team"]
packages = []

[tool.poetry.dependencies]
python = "^3.11"

# Core dependencies
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"

# LangGraph orchestration
langgraph = "^0.0.16"
langchain = "^0.1.0"
langchain-core = "^0.1.0"
langsmith = "^0.1.0"

# Database
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"

# MCP Tool Bus
mcp = "^1.0.0"

# Voice
livekit = "^0.1.0"

# API Gateway
kong-python-sdk = "^0.1.0"

# Observability
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-exporter-otlp = "^1.22.0"
prometheus-client = "^0.19.0"

# Kafka
aiokafka = "^0.10.0"

# Testing
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.26.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
ruff = "^0.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
